--- a/templates/core/order_table_partial.html
+++ b/templates/core/order_table_partial.html
@@ -127,27 +127,28 @@
                 </td>
 
                 <!-- ✅ QR Kod (Media URL üzerinden) -->
-                <td>
-                    {% if order.qr_code %}
-                        <img src="{{ order.qr_code.url }}" alt="QR Kod" class="qr-img">
+                 <td>
+                    {% if order.qr_code_url %}
+                        <img src="{{ order.qr_code_url }}" alt="QR Kod" class="qr-img">
                     {% else %}
                         -
                     {% endif %}
                 </td>
 
+
                 <!-- 🖨️ Yazdır Butonu -->
                 <td class="text-center">
-                    {% if order.qr_code %}
-                        <button type="button" class="btn btn-outline-secondary print-btn"
-                            onclick="printLabel(
-                                '{{ order.siparis_numarasi|escapejs }}',
-                                '{{ order.musteri|default_if_none:""|escapejs }}',
-                                '{{ order.urun_kodu|default_if_none:""|escapejs }}',
-                                '{{ order.adet|default_if_none:""|escapejs }}',
-                                '{{ order.qr_code.url }}'
-                            )">
-                            🖨️
-                        </button>
+                    {% if order.qr_code_url %}
+                    <button type="button" class="btn btn-outline-secondary print-btn"
+                        onclick="printLabel(
+                            '{{ order.siparis_numarasi|escapejs }}',
+                            '{{ order.musteri|default_if_none:""|escapejs }}',
+                            '{{ order.urun_kodu|default_if_none:""|escapejs }}',
+                            '{{ order.adet|default_if_none:""|escapejs }}',
+                            '{{ order.qr_code_url|escapejs }}'
+                        )">
+                        🖨️
+                    </button>
                     {% else %}
                         <span class="text-muted small fst-italic">-</span>
                     {% endif %}
