Clean repo, add gitignore and prepare env-based setup

--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
       <a class="chip"><i class="bi bi-coin"></i> Ürün Maliyetleri</a>
       <a class="chip"><i class="bi bi-people"></i> Kullanıcı Yönetimi</a>
       <a class="chip"><i class="bi bi-clock-history"></i> Puantaj & Mesai</a>
-      <a class="chip"><i class="bi bi-robot"></i> Moli Asistan</a>
+      <a class="chip"><i class="bi bi-robot"></i> Asistan</a>
       <a class="chip"><i class="bi bi-gear"></i> Ayarlar</a>
 
     </div>
